finish login page, full layout

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/common.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css?rev=4082409a1034870d93b38467b1b7de56">
+    <link rel="stylesheet" href="css/style.css?rev=092e176691c439364a56a893b5e19658">
 </head>
 
 <body>
@@ -21,9 +21,10 @@
     <script>
     window.jQuery || document.write('<script src="lib/vendor/jquery-1.11.3.min.js"><\/script>')
     </script>
-    <script src="js/app.min.js?rev=7ea8ca53a36325dca3a98318e4625f2c"></script>
+    <script src="js/app.min.js?rev=b6fb77db8015e15168190faf9efaab5f"></script>
     
-    <script src="js/main.min.js?rev=66dc6676e9d4e1a1698b53efc40bb896"></script>             
+    <script src="js/main.min.js?rev=87d128a8cde5a834c9559e33e45d4483"></script>             
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 
 </html>
