--- a/public/src/index.html
+++ b/public/src/index.html
@@ -9,21 +9,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="icon" type="image/x-icon" href="{{root}}favicon.ico">
+    <link rel="stylesheet" href="{{root}}css/common.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css?rev=@@hash">
+    <link rel="stylesheet" href="{{root}}css/style.css?rev=@@hash">
 </head>
 
 <body>
     <section id="app"></section>
     <script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
     <script>
-    window.jQuery || document.write('<script src="lib/vendor/jquery-1.11.3.min.js"><\/script>')
+    window.jQuery || document.write('<script src="{{root}}lib/vendor/jquery-1.11.3.min.js"><\/script>')
     </script>
     <script src="{{app.js}}"></script>
     {{webpack-dev-server.js}}
-    <script src="js/main.min.js?rev=@@hash"></script>             
+    <script src="{{root}}js/main.min.js?rev=@@hash"></script>             
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 
 </html>
