--- a/public/index.html
+++ b/public/index.html
@@ -9,21 +9,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="/css/common.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css?rev=092e176691c439364a56a893b5e19658">
+    <link rel="stylesheet" href="/css/style.css?rev=fe41bb5394d5df02f6bb04bf247af92e">
 </head>
 
 <body>
     <section id="app"></section>
     <script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
     <script>
-    window.jQuery || document.write('<script src="lib/vendor/jquery-1.11.3.min.js"><\/script>')
+    window.jQuery || document.write('<script src="/lib/vendor/jquery-1.11.3.min.js"><\/script>')
     </script>
-    <script src="js/app.min.js?rev=b6fb77db8015e15168190faf9efaab5f"></script>
+    <script src="/js/app.min.js?rev=a4cf9662eadb8fe0d6cc2a51aaea2b52"></script>
     
-    <script src="js/main.min.js?rev=87d128a8cde5a834c9559e33e45d4483"></script>             
+    <script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script>             
     <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 
