登录，路由优化

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/common.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css?rev=fe41bb5394d5df02f6bb04bf247af92e">
+    <link rel="stylesheet" href="/css/style.css?rev=839b5266f6ad38515d4f9dc229647d96">
+    <script type="text/javascript">xfxb = {login: false};</script>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
     <script>
     window.jQuery || document.write('<script src="/lib/vendor/jquery-1.11.3.min.js"><\/script>')
     </script>
-    <script src="/js/app.min.js?rev=9c9cde388bc21800dfa1b2c6069f19b0"></script>
+    <script src="/js/app.min.js?rev=3287b908cc3db3ff54841edcfbcf6bf5"></script>
     
     <script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script>             
     <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
