--- a/public/src/index.html
+++ b/public/src/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{{root}}css/common.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{root}}css/style.css?rev=@@hash">
+    <script type="text/javascript">xfxb = {login: false};</script>
 </head>
 
 <body>
