new ui and logo

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
-    <link rel="icon" type="image/x-icon" href="{{root}}favicon.ico">
-    <link rel="stylesheet" href="{{root}}css/common.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="/css/common.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{root}}css/style.css?rev=@@hash">
+    <link rel="stylesheet" href="/css/style.css?rev=a0aefb1aa44efc3429aff6420054dddb">
     <script type="text/javascript">xfxb = { login: {{isLogin}} };</script>
 </head>
 
@@ -20,11 +20,11 @@
     <section id="app"></section>
     <script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
     <script>
-    window.jQuery || document.write('<script src="{{root}}lib/vendor/jquery-1.11.3.min.js"><\/script>')
+    window.jQuery || document.write('<script src="/lib/vendor/jquery-1.11.3.min.js"><\/script>')
     </script>
-    <script src="{{app.js}}"></script>
-    {{webpack-dev-server.js}}
-    <!-- <script src="{{root}}js/main.min.js?rev=@@hash"></script>              -->
+    <script src="/js/app.min.js?rev=db57accbe028923bcc07b5d5f88abcd9"></script>
+    
+    <!-- <script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script>              -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 
