1.订单管理页面初步成型；2.添加多个公用组件

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="{{root}}css/common.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{root}}css/style.css?rev=@@hash">
-    <script type="text/javascript">xfxb = { login: {{isLogin}} };</script>
+    <!-- <script type="text/javascript">xfxb = { login: {{isLogin}} };</script> -->
+    <script type="text/javascript">xfxb = { login: true };</script>
 </head>
 
 <body>
@@ -26,6 +27,7 @@
     {{webpack-dev-server.js}}
     <!-- <script src="{{root}}js/main.min.js?rev=@@hash"></script>              -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="{{root}}lib/bootstrap-datepicker.js"></script>
 </body>
 
 </html>
