--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,9 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/common.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css?rev=a0aefb1aa44efc3429aff6420054dddb">
-    <script type="text/javascript">xfxb = { login: {{isLogin}} };</script>
+    <link rel="stylesheet" href="/css/style.css?rev=11312ed6c2d30682a205492f4b014c64">
+    <!-- <script type="text/javascript">xfxb = { login: {{isLogin}} };</script> -->
+    <script type="text/javascript">xfxb = { login: true };</script>
 </head>
 
 <body>
@@ -22,10 +23,11 @@
     <script>
     window.jQuery || document.write('<script src="/lib/vendor/jquery-1.11.3.min.js"><\/script>')
     </script>
-    <script src="/js/app.min.js?rev=db57accbe028923bcc07b5d5f88abcd9"></script>
+    <script src="/js/app.min.js?rev=2d5db87c287c9e304b2ed2a5f29dbdfa"></script>
     
     <!-- <script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script>              -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="/lib/bootstrap-datepicker.js"></script>
 </body>
 
 </html>
