添加订单，编辑订单90%

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -14,7 +14,7 @@
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{root}}css/style.css?rev=@@hash">
     <!-- <script type="text/javascript">xfxb = { login: {{isLogin}} };</script> -->
-    <script type="text/javascript">xfxb = { login: true };</script>
+    <script type="text/javascript">xfxb = { login: true, root: "{{root}}", };</script>
 </head>
 
 <body>
