--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/common.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css?rev=6d003ca76fc9cebe8284bbe85b7d8d57">
+    <link rel="stylesheet" href="/css/style.css?rev=ab1d374dfdd08bd637d094921b792c04">
     <!-- <script type="text/javascript">xfxb = { login: {{isLogin}} };</script> -->
-    <script type="text/javascript">xfxb = { login: true };</script>
+    <script type="text/javascript">xfxb = { login: true, root: "/", };</script>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     <script>
     window.jQuery || document.write('<script src="/lib/vendor/jquery-1.11.3.min.js"><\/script>')
     </script>
-    <script src="/js/app.min.js?rev=9401355d6354432acfe1e25d6598e0d6"></script>
+    <script src="/js/app.min.js?rev=ce18c53900286d2deda85b4c394a8039"></script>
     
     <!-- <script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script>              -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
