--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/common.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css?rev=@@hash">
+    <link rel="stylesheet" href="/css/style.css?rev=623c9d96d68f8c1c16e1cc3cbb51d57e">
     <!-- <script type="text/javascript">xfxb = { login: {{isLogin}} };</script> -->
     <script type="text/javascript">xfxb = { login: true, root: "/", };</script>
 </head>
@@ -23,9 +23,9 @@
     <script>
     window.jQuery || document.write('<script src="/lib/vendor/jquery-1.11.3.min.js"><\/script>')
     </script>
-    <script src="http://localhost:3000/app.js"></script>
-    <script src="http://localhost:3000/webpack-dev-server.js"></script>
-    <!-- <script src="/js/main.min.js?rev=@@hash"></script>              -->
+    <script src="/js/app.min.js?rev=ec497afd1ecac9889773e963b97b4229"></script>
+    
+    <!-- <script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script>              -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="/lib/bootstrap-datepicker.js"></script>
 </body>
