--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/datepicker.min.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css?rev=5d642d1e29944700f90d455f8f8fc3e7">
     <!-- <script type="text/javascript">xfxb = { login: {{isLogin}} };</script> -->
@@ -23,11 +23,11 @@
     <script>
     window.jQuery || document.write('<script src="/lib/vendor/jquery-1.11.3.min.js"><\/script>')
     </script>
-    <script src="/js/app.min.js?rev=c9bd555f4600d50272ccea130874dd1c"></script>
+    <script src="/js/app.min.js?rev=7d341be51e85c8d8cdb3d6b90bbf24ad"></script>
     
     <!-- <script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script>              -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="/lib/bootstrap-datepicker.js"></script>
+    <script src="/lib/bootstrap-datepicker.min.js"></script>
 </body>
 
 </html>
