--- a/public/src/index.html
+++ b/public/src/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
     <link rel="icon" type="image/x-icon" href="{{root}}favicon.ico">
-    <link rel="stylesheet" href="{{root}}css/common.css">
+    <link rel="stylesheet" href="{{root}}css/datepicker.min.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{root}}css/style.css?rev=@@hash">
     <!-- <script type="text/javascript">xfxb = { login: {{isLogin}} };</script> -->
@@ -27,7 +27,7 @@
     {{webpack-dev-server.js}}
     <!-- <script src="{{root}}js/main.min.js?rev=@@hash"></script>              -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="{{root}}lib/bootstrap-datepicker.js"></script>
+    <script src="{{root}}lib/bootstrap-datepicker.min.js"></script>
 </body>
 
 </html>
