--- a/public/src/index.html
+++ b/public/src/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{{root}}css/datepicker.min.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{root}}css/style.min.css?rev=@@hash">
-    <script type="text/javascript">xfxb = { login: {{isLogin}}, root: "{{root}}", };</script>
+    <script type="text/javascript">xfxb = { login: {{isLogin}}, login1: "{{isLogin}}", root: "{{root}}", };</script>
     <!-- <script type="text/javascript">xfxb = { login: false, root: "{{root}}", };</script> -->
 </head>
 
