--- a/public/index.html
+++ b/public/index.html
@@ -9,25 +9,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
-    <link rel="icon" type="image/x-icon" href="http://127.0.0.1:7002/favicon.ico">
-    <link rel="stylesheet" href="http://127.0.0.1:7002/css/datepicker.min.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="/css/datepicker.min.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://127.0.0.1:7002/css/style.min.css?rev=@@hash">
-    <script type="text/javascript">xfxb = { login: {{isLogin}}, login1: "{{isLogin}}", root: "http://127.0.0.1:7002/", };</script>
-    <!-- <script type="text/javascript">xfxb = { login: false, root: "http://127.0.0.1:7002/", };</script> -->
+    <link rel="stylesheet" href="/css/style.min.css?rev=@@hash">
+    <script type="text/javascript">xfxb = { login: {{isLogin}}, login1: "{{isLogin}}", root: "/", };</script>
+    <!-- <script type="text/javascript">xfxb = { login: false, root: "/", };</script> -->
 </head>
 
 <body>
     <section id="app"></section>
-    <script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
+    <!-- <script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script> -->
     <script>
-    window.jQuery || document.write('<script src="http://127.0.0.1:7002/lib/vendor/jquery-1.11.3.min.js"><\/script>')
+    window.jQuery || document.write('<script src="/lib/vendor/jquery-1.11.3.min.js"><\/script>')
     </script>
-    <script src="/js/app.min.js?rev=2627da2a662717ca373c44f4b6b2b387"></script>
-    
-    <!-- <script src="http://127.0.0.1:7002/js/main.min.js?rev=@@hash"></script>              -->
+    <script src="http://localhost:3000/app.js"></script>
+    <script src="http://localhost:3000/webpack-dev-server.js"></script>
+    <!-- <script src="/js/main.min.js?rev=@@hash"></script>              -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="http://127.0.0.1:7002/lib/bootstrap-datepicker.min.js"></script>
+    <script src="/lib/bootstrap-datepicker.min.js"></script>
 </body>
 
 </html>
