--- a/public/index.html
+++ b/public/index.html
@@ -13,16 +13,13 @@
     <link rel="stylesheet" href="/css/datepicker.min.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.min.css?rev=@@hash">
-    <script type="text/javascript">xfxb = { login: {{isLogin}}, login1: "{{isLogin}}", root: "/", };</script>
+    <script type="text/javascript">xfxb = { login: {{isLogin}}, root: "/", };</script>
     <!-- <script type="text/javascript">xfxb = { login: false, root: "/", };</script> -->
 </head>
 
 <body>
     <section id="app"></section>
-    <!-- <script src="http://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script> -->
-    <script>
-    window.jQuery || document.write('<script src="/lib/vendor/jquery-1.11.3.min.js"><\/script>')
-    </script>
+    <script src="/lib/vendor/jquery-1.11.3.min.js"></script>
     <script src="http://localhost:3000/app.js"></script>
     <script src="http://localhost:3000/webpack-dev-server.js"></script>
     <!-- <script src="/js/main.min.js?rev=@@hash"></script>              -->
