--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/datepicker.min.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.min.css?rev=@@hash">
+    <link rel="stylesheet" href="/css/style.min.css?rev=c31cfa0422fc7fea61ad1704bf7f2fb0">
     <script type="text/javascript">xfxb = { login: {{isLogin}}, root: "/", };</script>
     <!-- <script type="text/javascript">xfxb = { login: false, root: "/", };</script> -->
 </head>
@@ -20,9 +20,9 @@
 <body>
     <section id="app"></section>
     <script src="/lib/vendor/jquery-1.11.3.min.js"></script>
-    <script src="http://localhost:3000/app.js"></script>
-    <script src="http://localhost:3000/webpack-dev-server.js"></script>
-    <!-- <script src="/js/main.min.js?rev=@@hash"></script>              -->
+    <script src="//js/app.min.js?rev=28085591004e3a415ae3f90e437eaf01"></script>
+    
+    <!-- <script src="/js/main.min.js?rev=74a2b33f68a000e4799f522640dc3654"></script>              -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="/lib/bootstrap-datepicker.min.js"></script>
 </body>
