update order edit

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -8,13 +8,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <!-- Place favicon.ico in the root directory -->
     <link rel="icon" type="image/x-icon" href="{{root}}favicon.ico">
     <link rel="stylesheet" href="{{root}}css/datepicker.min.css">
-    <link href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="{{root}}plugins/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{root}}css/style.min.css?rev=@@hash">
     <script type="text/javascript">xfxb = { login: {{isLogin}}, root: "{{root}}", };</script>
-    <!-- <script type="text/javascript">xfxb = { login: false, root: "{{root}}", };</script> -->
 </head>
 
 <body>
@@ -23,7 +21,7 @@
     <script src="{{app.js}}"></script>
     {{webpack-dev-server.js}}
     <!-- <script src="{{root}}js/main.min.js?rev=@@hash"></script>              -->
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="{{root}}lib/bootstrap.min.js"></script>
     <script src="{{root}}lib/bootstrap-datepicker.min.js"></script>
 </body>
 
