--- a/public/jlh/index.html
+++ b/public/jlh/index.html
@@ -67,6 +67,7 @@
 	  			<tbody>
 	  			</tbody>
 	  		</table>
+			<button id="modifiyStation" class="btn btn-primary btn-md btn-block">保存</button>
 	  	</div>
 	</div>
 
