--- a/public/jlh/index.html
+++ b/public/jlh/index.html
@@ -10,42 +10,26 @@
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="http://api.map.baidu.com/library/SearchControl/1.4/src/SearchControl_min.css">
   <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=dxF5GZW6CHlR4GCQ9kKynOcc"></script>
-  <script type="text/javascript" src="http://api.map.baidu.com/library/SearchControl/1.4/src/SearchControl_min.js"></script>
 </head>
 
 <body>
 	<div class="container">
-	    <div class="row clearfix">
-	    	<div class="col-sm-2">
-	          	<button id="createPoline" class="btn btn-primary btn-md btn-block">1.闭合折线</button>
-	          	<button id="createData" class="btn btn-success btn-md btn-block">2.导出数据</button>
-	    	</div>
-	      	<div class="col-sm-8">
-	        	<div class="form-group">
-	          		<textarea id="dataArray" class="form-control" type="text" placeholder='请输入数据 格式如：[{"lng":number,"lat":number}}]'></textarea>
-	       	 	</div>
-	      	</div>
-	     	 <div class="col-sm-2">
-	          	<button id="confirm" class="btn btn-info btn-md btn-block">确认输入</button>
-	          	<button id="clearMark" class="btn btn-danger btn-md btn-block">清除标记</button>
-	      	</div>
-	  	</div>
 	  	<div class="row clearfix">
-	  		<div class="col-md-8 input-group col-md-offset-2">
-		    	<input type="search" class="form-control" id="findStation" placeholder="请输入您要查询的配送站">
-		    	<span class="input-group-btn ">
-		    		<button type="submit" id="searchStation" class="btn btn-default">查找</button>
-		    	</span>
-		    </div>
-		    <div class="col-md-8 input-group col-md-offset-2">
+	  		<form action="" class="form-inline">
+	  			<div class="input-group">
+			    	<input type="search" class="form-control" id="findStation" placeholder="请输入您要查询的配送站">
+			    	<span class="input-group-btn ">
+			    		<button type="submit" id="searchStation" class="btn btn-default">查找</button>
+			    	</span>
+				</div>
 		    	<select class="form-control" id="findProvince">
 		    		<option value="-1">省份</option>
 				</select>
 				<select class="form-control" id="findCities">
 		    		<option value="-1">城市</option>
 				</select>
-				<button id="searchCityStation" class="btn btn-primary btn-md btn-block">查询</button>
-		    </div>
+				<button id="searchCityStation" class="btn btn-primary btn-md">查询</button>
+	  		</form>
 	  	</div>
 	  	<div class="row clearfix">
 	  		<table id="tableStation" class="table table-hover">
@@ -71,7 +55,6 @@
 	  	</div>
 	</div>
 
-    <div id="searchBox"></div>
 
   	<div id="container"></div>
 
