--- a/public/jlh/index.html
+++ b/public/jlh/index.html
@@ -32,7 +32,7 @@
 	  		</form>
 	  	</div>
 	  	<div class="row clearfix">
-	  		<table id="tableStation" class="table table-hover">
+	  		<table id="tableStation" class="table table-hover table-bordered">
 	  			<thead>
 	  				<tr>
 	  					<th>
@@ -51,15 +51,32 @@
 	  			<tbody>
 	  			</tbody>
 	  		</table>
-			<button id="modifiyStation" class="btn btn-primary btn-md btn-block">保存</button>
 	  	</div>
 	</div>
 
+	<div class="modal fade" id="mapContainer">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<h4 class="modal-title">Modal title</h4>
+				</div>
+				<div class="modal-body">
+					<div id="container"></div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+					<button type="button" id="modifiyStation" class="btn btn-primary">保存</button>
+				</div>
+			</div>
+		</div>
+	</div>
 
-  	<div id="container"></div>
+  	
 
   	<script type="text/javascript" src="js/jquery.js"></script>
   	<script type="text/javascript" src="js/jquery-ui.js"></script>
+  	<script type="text/javascript" src="js/bootstrap.min.js"></script>
   	<script type="text/javascript" src="js/index.js"></script>
 </body>
 
