--- a/public/src/index.html
+++ b/public/src/index.html
@@ -11,7 +11,9 @@
   <link rel="icon" type="image/x-icon" href="{{root}}favicon.ico">
   <link href="{{root}}plugins/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{{root}}css/style.min.css?rev=@@hash">
-  <script type="text/javascript">xfxb = { login: {{isLogin}}, root: "{{root}}"{{#if user}}, user : '{{{user}}}' {{/if}} };</script>
+  <script type="text/javascript">
+    window.xfxb = { login: {{isLogin}}, root: "{{root}}"{{#if user}}, user : JSON.parse('{{{user}}}') || {} {{/if}} };
+  </script>
 </head>
 
 <body>
