--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,9 @@
   </div>
   <section id="app"></section>
   <script src="/lib/vendor/jquery-1.11.3.min.js"></script>
-  <script src="/js/app.min.js?rev=@@hash"></script>
+  <script src="http://localhost:3000/app.js"></script>
   <script type="text/javascript">$(function(){$('#loader').remove();})</script>
-  
+  <script src="http://localhost:3000/webpack-dev-server.js"></script>
   <!-- <script src="/js/main.min.js?rev=@@hash"></script> -->
   <script src="/lib/bootstrap.min.js"></script>
   <script src="/lib/bootstrap-datepicker.min.js"></script>
