--- a/public/src/index.html
+++ b/public/src/index.html
@@ -1,24 +1,23 @@
 <!doctype html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>幸福西饼</title>
-  <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <link rel="icon" type="image/x-icon" href="{{root}}favicon.ico">
-  <link href="{{root}}plugins/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="{{root}}css/style.min.css?rev=@@hash">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link href="/plugins/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
   <script type="text/javascript">
     window.xfxb = {
       login: {{isLogin}},
-      root: "{{root}}",
+      root: "/",
       version: "{{version}}"
       {{#if user}}, user : JSON.parse('{{{user}}}') || {} {{/if}}
     };
   </script>
+  <script>document.write('<script type="text/javascript" src="/build/webpack.assets.js?v=' + (new Date().getTime()) + '"><\/script>');</script>
+  <script>document.write('<link rel="stylesheet" href="' + window.WEBPACK_ASSETS.index.css + '">');</script>
 </head>
 
 <body>
@@ -31,13 +30,14 @@
     </div>
   </div>
   <section id="app"></section>
-  <script src="{{root}}lib/vendor/jquery-1.11.3.min.js"></script>
-  <script src="{{app.js}}"></script>
-  <script type="text/javascript">$(function(){$('#loader').remove();})</script>
-  {{webpack-dev-server.js}}
-  <!-- <script src="{{root}}js/main.min.js?rev=@@hash"></script> -->
-  <script src="{{root}}lib/bootstrap.min.js"></script>
-  <script src="{{root}}lib/bootstrap-datepicker.min.js"></script>
+  <script src="/lib/vendor/jquery-1.11.3.min.js"></script>
+  <script src="/lib/bootstrap.min.js"></script>
+  <script src="/lib/bootstrap-datepicker.min.js"></script>
+  <script>
+  document.write('<script type="text/javascript" src="' + window.WEBPACK_ASSETS.commons.js + '"><\/script>');
+  document.write('<script type="text/javascript" src="' + window.WEBPACK_ASSETS.index.js + '"><\/script>');
+  $(function(){$('#loader').remove();})
+  </script>
 </body>
 
 </html>
