--- a/public/src/index.html
+++ b/public/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>幸福西饼</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="icon" type="image/x-icon" href="<%= root %>favicon.ico">
   <link href="<%= root %>plugins/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
