加入修改密码功能

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -33,7 +33,7 @@
   <script type="text/javascript" src="<%= commons %>"></script>
   <script type="text/javascript" src="<%= index %>"></script>
   <script>$(function(){$('#loader').remove();})</script>
-  <script src="<%=root%>lib/bootstrap.min.js"></script>
+  <!-- <script src="<%=root%>lib/bootstrap.min.js"></script> -->
   <script src="<%=root%>lib/bootstrap-datepicker.min.js"></script>
 </body>
 
