--- a/public/src/index.html
+++ b/public/src/index.html
@@ -3,10 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>幸福西饼</title>
+  <script>
+    document.write(
+      (location.hostname === "asrm.xfxb.net" || location.hostname === "admin.xfxb.net")
+      ? '<title>幸福西饼</title><link rel="icon" type="image/x-icon" href="/favicon.ico">'
+      : '<title>幸福测试</title><link rel="icon" type="image/x-icon" href="/favicon.png">'
+    )
+  </script>
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <link rel="icon" type="image/x-icon" href="<%= root %>favicon.ico">
   <link href="<%= root %>plugins/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="<%= root %>css/style.min.css?rev=@@hash">
   <script type="text/javascript">
